fix gap en miniaturas

--- a/css/styles.css
+++ b/css/styles.css
@@ -466,7 +466,7 @@ mark {
   margin-bottom: var(--space-md);
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
@@ -903,10 +903,10 @@ footer a:hover {
 }
 
 .pi-main-img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .pi-carousel-btn {
@@ -930,7 +930,17 @@ footer a:hover {
   right: var(--space-md);
 }
 
+.pi-thumbs {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  line-height: 0;
+  margin-top: 12px;
+}
+
 .pi-thumb {
+  display: block;
+  overflow: hidden;
   padding: 0;
   border: 2px solid transparent;
   border-radius: var(--border-radius-md);
